add modal contact

--- a/index.html
+++ b/index.html
@@ -72,6 +72,35 @@
 			</div>
 		</div>
 	</nav>
+	<div class="nav-responsive d-block d-md-none">
+		<div class="nav-responsive__main">
+			<a href="#">
+				<div class="nav-responsive__content">
+					<img src="assets/img/Grupo 887.png" alt="">
+				</div>
+			</a>
+			<a href="#">
+				<div class="nav-responsive__content">
+					<img src="assets/img/serch bottom.png" alt="">
+				</div>
+			</a>
+			<a href="#">
+				<div class="nav-responsive__content nav-box">
+					<img src="assets/img/cart.png" alt="">
+				</div>
+			</a>
+			<a href="#">
+				<div class="nav-responsive__content">
+					<img src="assets/img/whatsapp.png" alt="">
+				</div>
+			</a>
+			<a href="#">
+				<div class="nav-responsive__content">
+					<img src="assets/img/user.png" alt="">
+				</div>
+			</a>
+		</div>
+	</div>
 </header>
 
 <section class="pb-5">
@@ -91,7 +120,10 @@
 						</div>
 					</div>
 					<div class="main-banner__img">
-						<div class="main-banner__img--content"><img src="assets/img/banner home.png" alt=""></div>
+						<div class="main-banner__img--content">
+							<img class="d-none d-md-block" src="assets/img/banner home.png" alt="">
+							<img class="d-block d-md-none" src="assets/img/banner respon.png" alt="">
+						</div>
 					</div>
 				</div>
 				<div class="main-banner__item">
@@ -107,7 +139,10 @@
 						</div>
 					</div>
 					<div class="main-banner__img">
-						<div class="main-banner__img--content"><img src="assets/img/banner home.png" alt=""></div>
+						<div class="main-banner__img--content">
+							<img class="d-none d-md-block" src="assets/img/banner home.png" alt="">
+							<img class="d-block d-md-none" src="assets/img/banner respon.png" alt="">
+						</div>
 					</div>
 				</div>
 			</div>
