--- a/index.html
+++ b/index.html
@@ -150,19 +150,34 @@
 	</div>
 	<div class="subanner padding-rl fadeInUp wow"  >
 		<div class="subanner-content">
-			<a href="#"><img src="assets/img/restaurantes.png" alt=""></a>
+			<a href="#">
+				<img src="assets/img/restaurantes.png" alt="">
+				<p>Resturantes</p>
+			</a>
 		</div>
 		<div class="subanner-content">
-			<a href="#"><img src="assets/img/bodegones.png" alt=""></a>
+			<a href="#">
+				<img src="assets/img/bodegones.png" alt="">
+				<p>Bodegón</p>
+			</a>
 		</div>
 		<div class="subanner-content">
-			<a href="#"><img src="assets/img/farmacias.png" alt=""></a>
+			<a href="#">
+				<img src="assets/img/farmacias.png" alt="">
+				<p>Viveres</p>
+			</a>
 		</div>
 		<div class="subanner-content">
-			<a href="#"><img src="assets/img/viveres.png" alt=""></a>
+			<a href="#">
+				<img src="assets/img/viveres.png" alt="">
+				<p>Farmacias</p>
+			</a>
 		</div>
 		<div class="subanner-content">
-			<a href="#"><img src="assets/img/shopping.png" alt=""></a>
+			<a href="#">
+				<img src="assets/img/shopping.png" alt="">
+				<p>Shopping</p>
+			</a>
 		</div>
 	</div>
 	<div class="search-content">
@@ -415,11 +430,12 @@
 	<div class="publicidad" >
 		<div class="main-publicidad mb-5">
 			<div class="main-publicidad__text padding-rl">
-				<p class="title-general">No decides que <br> comprar?</p>
-				<p class="subtitle-general">Te ofrecemos las mejores tiendas <br> con el mejor servicio.</p>
+				<p class="title-general title-publicidad">No decides que <br> comprar?</p>
+				<p class="subtitle-general subtitle-publicidad">Te ofrecemos las mejores tiendas <br> con el mejor servicio.</p>
 			</div>
 			<div class="main-publicidad__bg">
-				<img src="assets/img/publicidad home.png" alt="">
+				<img class="" src="assets/img/publicidad home.png" alt="">
+				
 			</div>
 		</div>
 	</div>
