--- a/index.html
+++ b/index.html
@@ -558,7 +558,7 @@
 				    <button class="btn btn-afiliar" >Afiliate</button>
 				</div>			
 				<div class="main-footer__afiliar--link">
-					<a href="">Envíos</a>
+					<a href="envios.html">Envíos</a>
 					<a href="">Dasher</a>
 				</div>
 			</div>
