changes in responsive category view

--- a/category.html
+++ b/category.html
@@ -104,7 +104,7 @@
 </header>
 
 <section class="pb-5">
-	<div class="banner">
+	<div class="banner banner-category">
 		<div class="main-banner">
 			<div class="main-banner__content main-banner-category__content">
 				<div class="main-banner__item">
@@ -133,7 +133,7 @@
 					</div>
 				</div>
 			</div>
-			<div class="dropdown-banner-category">
+			<div class="dropdown-banner-category d-none d-md-block">
 				<div class="dropdown-regresar">
 					<a href="#"><i class="fa fa-angle-left" aria-hidden="true"></i></a>
 				</div>
@@ -160,6 +160,25 @@
 					    	<img src="assets/img/shopping.png" alt="">
 					    	<a class="dropdown-item" href="#">Shopping</a>
 					    </div>
+					</div>
+				</div>
+			</div>
+			<div class="dropdown-banner-category__resposive d-block d-md-none">
+				<div class="dropdown-category__responsive-content">
+					<div class="dropdown-menu__content--resposive">
+						<a href="#">Bodegones</a>
+						<a href="#">Viveres</a>
+						<a href="#">Farmacias</a>
+						<a href="#">Shopping</a>
+					</div>
+					<div class="dropdown-responsive">
+						<div class="dropdown-regresar">
+							<a href="#"><i class="fa fa-chevron-left" aria-hidden="true"></i></a>
+						</div>
+						<a href="#" class="dropdown-responsive__content">
+							<img src="assets/img/restaurantes.png" alt="">
+							Restaurantes
+						</a>
 					</div>
 				</div>
 			</div>
@@ -219,7 +238,7 @@
 				<p>Desayuno</p>
 			</a>
 	</div>
-	<div class="search-content">
+	<div class="search-content search-content-category">
 		
 		<button class="" type="submit"><img src="assets/img/serch bottom.png" alt=""></button>
 	    <input class="form-control mr-sm-2" type="search" placeholder="Busca tus productos o tiendas favoritas" aria-label="Search">
