little changes in category

--- a/category.html
+++ b/category.html
@@ -133,7 +133,7 @@
 					</div>
 				</div>
 			</div>
-			<div class="dropdown-banner-category d-none d-md-block">
+			<div class="dropdown-banner-category d-none d-md-flex">
 				<div class="dropdown-regresar">
 					<a href="#"><i class="fa fa-angle-left" aria-hidden="true"></i></a>
 				</div>
