--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 </head>
 <body>
 	
-<header class="header">
+<!-- <header class="header">
 
     <nav class="navbar navbar-expand-lg ">
     	<div class="navbar-content padding-rl">
@@ -73,7 +73,57 @@
 			</div>
 		</div>
 	</nav>
-	<div class="nav-responsive d-block d-md-none">
+	
+</header> -->
+
+
+<header id="home">
+    <nav class="navbar navbar-expand-lg " id="navbar">
+      <div class="main-brand">
+        <a itemprop="url" class="navbar-brand" href="/">
+			<img id="iso" src="assets/img/logo dasher narvbar.png" alt="" />
+        </a>
+        <button class="navbar-toggler p-2 border-0 hamburger hamburger--elastic ml-autos" data-toggle="offcanvas"
+          type="button">
+          <span class="hamburger-box">
+            <span class="hamburger-inner"></span>
+          </span>
+        </button>
+      </div>
+      <div class="navbar-collapse offcanvas-collapse">
+        <ul class="navbar-nav ml-auto">
+			<li class="nav-item ">
+				<a class="nav-link  " href="<?php bloginfo('url'); ?>">Home</a>
+			</li>
+
+			<li class="nav-item ">
+				<a class="nav-link  " href="#about">Afilia tu negocio</a>
+			</li>
+			<li class="nav-item">
+				<a class="nav-link " href="<?php bloginfo('url'); ?>/news">Como funciona</a>
+
+			</li>
+			<li class="nav-item">
+				<a class="nav-link "href="#">Promos Dasher</a>
+			</li>
+			<li class="nav-item">
+				<a class="nav-link nav-registrar" data-toggle="modal" data-target="#modal-form">Registrate</a>
+			</li>
+			<li class="nav-item">
+				<a class="nav-link nav-ingresar"href="#">Ingresar</a>
+			</li>
+			<li class="nav-item">
+				<a class="nav-link "href="#">Contacto</a>
+			</li>
+			<li class="nav-item">
+				<a class="nav-link "href="#"><img src="assets/img/carrito.png" alt=""></a>
+			</li>
+
+			
+		</ul>
+      </div>
+	</nav>
+	<div id="nav-responsive" class="nav-responsive d-block d-md-none">
 		<div class="nav-responsive__main">
 			<a href="#">
 				<div class="nav-responsive__content">
@@ -102,8 +152,7 @@
 			</a>
 		</div>
 	</div>
-</header>
-
+  </header>
 <section class="pb-5">
 	<div class="banner">
 		<div class="main-banner">
