--- a/tienda.html
+++ b/tienda.html
@@ -158,7 +158,7 @@
 		<div class="main-tienda-perfil__content padding-rl">
 			<div class="tienda-perfil__content--item">
 				<div class="perfil-content__item--img">
-					<img src="assets/img/Grupo 1581.svg" alt="">
+					<img src="assets/img/" alt="">
 				</div>
 			</div>
 			<div class="tienda-perfil__content--item">
@@ -172,21 +172,21 @@
 				<div class="perfil-content__item--info">
 					<div class="content-item__info--services">
 						<div class="item-info__services--content">
-							<img src="" alt="">
+							<img src="assets/img/entrega-de-comida.svg" alt="">
 							<p>Delivery</p>
 						</div>
 						<div class="item-info__services--content">
-							<img src="" alt="">
+							<img src="assets/img/bolso.svg" alt="">
 							<p>Pick up</p>
 						</div>
 					</div>
 					<div class="content-item__info--ubica">
 						<div class="item-info__info--content">
-							<img src="" alt="">
+							<img src="assets/img/location.svg" alt="">
 							<p>Ubicación del local 1, calle 2</p>
 						</div>
 						<div class="item-info__info--content">
-							<img src="" alt="">
+							<img src="assets/img/location.svg" alt="">
 							<p>Ubicación del local 2, calle 1</p>
 						</div>
 					</div>
